--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
     <img src="img/icon.png" alt="Logo" class="footer__logo" />
     <p class="footer__copyright">
       &copy; Copyright by
-      <a class="footer__link twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas
-        Schmedtmann</a>. Use for learning or your portfolio. Don't use to teach. Don't claim
-      as your own product.
+      <a class="footer__link twitter-link" target="_blank"
+        href="https://x.com/last_of_d_ezehs?s=21&t=R1791Hc3XwupUSRfDXAulQ">Ezeh
+        John</a>.for my learning Purpose
     </p>
   </footer>
 
