--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       &copy; Copyright by
       <a class="footer__link twitter-link" target="_blank"
         href="https://x.com/last_of_d_ezehs?s=21&t=R1791Hc3XwupUSRfDXAulQ">Ezeh
-        John</a>.for my learning Purpose
+        John</a> for my learning Purpose
     </p>
   </footer>
 
